// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $192,341,231,412.35
  </h1>
</div>
`;

exports[`should render expense summary with one expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</div>
`;
